--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <h1>People entered:</h1>
-        <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
-        <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
-        <script src="index.js">
-            nnerText
-        </script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Saadi Shamallakh</h1>
+      <p class="tagline">Aspiring Front-End Developer</p>
+      <nav class="navLinks">
+        <a href="#about">About</a>
+        <a href="#why">Why This Program</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          Hello! I’m Saadi, a self-taught front-end developer with a passion for
+          building clean, responsive websites. I recently completed the Meta
+          Front-End Developer Professional Certificate and have been actively
+          sharpening my skills in HTML, CSS, and JavaScript through personal
+          projects and Scrimba’s interactive courses.
+        </p>
+      </section>
+
+      <section id="why">
+        <h2>Why I’m Applying</h2>
+        <p>
+          I thrive when challenged to learn independently and solve real-world
+          problems. This program’s emphasis on hands-on projects and mentorship
+          aligns perfectly with my learning style. I’m eager to contribute my
+          dedication and grow into a well-rounded full-stack developer.
+        </p>
+      </section>
+
+      <section id="contact">
+        <h2>Contact Me</h2>
+        <ul>
+          <li>Email: saadi.dev.ps@gmail.com</li>
+          <li>
+            LinkedIn:
+            <a
+              href="https://www.linkedin.com/in/saadi-shamallakh/"
+              target="_blank"
+              >Saadi</a
+            >
+          </li>
+          <li>
+            GitHub:
+            <a href="https://github.com/XSaadiX" target="_blank">XSaadiX</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 Saadi</p>
+    </footer>
+  </body>
 </html>
